Updated to python 3.5

--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,13 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [dev-packages]
-
-
 
 [packages]
 
 apscheduler = "==3.0.0"
 rq = "*"
 requests = "*"
+
+[requires]
+python_version = "3.5"
